objects/EUR_CRM_Investments__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Investment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Marketing_Investment_Total__c</fullName>
        <label>Marketing Investment (Total)</label>
        <summarizedField>EUR_CRM_Investment_Type__c.EUR_CRM_MKT__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Investment_Type__c.EUR_CRM_Investment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_Investments__c</fullName>
        <label>No. of Investments</label>
        <summaryForeignKey>EUR_CRM_Investment_Type__c.EUR_CRM_Investment_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Division__c</fullName>
        <formula>$UserRole.Name</formula>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Investment_Total__c</fullName>
        <label>Sales Investment (Total)</label>
        <summarizedField>EUR_CRM_Investment_Type__c.EUR_CRM_Sales__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Investment_Type__c.EUR_CRM_Investment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Investment__c</fullName>
        <label>Total Investment</label>
        <summarizedField>EUR_CRM_Investment_Type__c.EUR_CRM_Total__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Investment_Type__c.EUR_CRM_Investment_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Investment (EU)</label>
    <nameField>
        <displayFormat>IR{00000}</displayFormat>
        <label>Investment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investments (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRT_Marketing_Investment</fullName>
        <active>true</active>
        <description>Marketing Investment for Portugal</description>
        <label>Marketing Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_Sales_Investment</fullName>
        <active>true</active>
        <description>Sales Investment for Portugal</description>
        <label>Sales Investment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>